--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,245 +1,297 @@
 body {
-    background-image: url("../images/back_pattern.png");
-    margin: 0;
+  background-image: url("../images/back_pattern.png");
+  margin: 0;
 }
 
-a, p {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777777;
-    text-decoration: none;
+a,
+p {
+  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+  color: #777777;
+  text-decoration: none;
 }
 
 a:hover {
-    color: #4aaaa5;
+  color: #4aaaa5;
 }
 
 /********Navigation*********/
 
 .nav {
-    position: absolute;
-    top: 0;
-    margin: 0px 0px 40px 0px;
-    background: #ffffff;
-    position: relative;
-    width: 100%;
-    height: 100px;
-    border-bottom: solid 2px #cccccc;
+  position: absolute;
+  top: 0;
+  margin: 0px 0px 40px 0px;
+  background: #ffffff;
+  position: relative;
+  width: 100%;
+  height: 100px;
+  border-bottom: solid 2px #cccccc;
 }
 
 .nav-container {
-    height: 100px;
-    width: 960px;
-    margin: 0 auto; 
+  height: 100px;
+  width: 960px;
+  margin: 0 auto;
 }
 
 #logo {
-    height: 100px;
-    float: left;
-    background: #4aaaa5;
-    margin: 0;
+  height: 100px;
+  float: left;
+  background: #4aaaa5;
+  margin: 0;
+  -webkit-animation-name: logoFadeIn; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 2s; /* Safari 4.0 - 8.0 */
+  animation-name: logoFadeIn;
+  animation-duration: 2s;
+}
+
+@-webkit-keyframes logoFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes logoFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 h1 {
-        color: #ffffff;
-        font-family: 'Georgia', Times, 'Times New Roman', serif;
-        margin: 30px;
+  color: #ffffff;
+  font-family: "Georgia", Times, "Times New Roman", serif;
+  margin: 30px;
 }
 
 .nav-btn {
-    float: right;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #666666;
-    margin: 40px 0px 40px 30px;
+  float: right;
+  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+  color: #666666;
+  margin: 40px 0px 40px 30px;
 }
 
 /********Main Content*********/
 
 .content {
-    margin-bottom: 200px;
+  margin-bottom: 200px;
 }
 
 .clearfix:after {
-    content: " "; 
-    visibility: hidden;
-    display: block;
-    height: 0;
-    clear: both;
- }
+  content: " ";
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both;
+}
 
 .main {
-    background: #ffffff;
-    border: solid 1px #dddddd;
-    margin: 0 auto;
-    width: 960px;
+  background: #ffffff;
+  border: solid 1px #dddddd;
+  margin: 0 auto;
+  width: 960px;
 }
 
 h2 {
-    color: #4aaaa5;
-    font-size: 30px;
-    margin: 40px 20px 40px 20px;
-    padding-bottom: 20px;
-    border-bottom: solid 2px #cccccc;
+  color: #4aaaa5;
+  font-size: 30px;
+  margin: 40px 20px 40px 20px;
+  padding-bottom: 20px;
+  border-bottom: solid 2px #cccccc;
 }
 
 #profile-photo {
-    float: left;
-    height: 200px;
-    width: 200px;
-    margin: 0px 20px 0px;
+  float: left;
+  height: 200px;
+  width: 200px;
+  margin: 0px 20px 0px;
 }
 
 .container-index {
-    padding: 0px 20px 20px 20px;
+  padding: 0px 20px 20px 20px;
 }
 
 .container-portfolio {
-    padding: 0px 20px 20px 20px;
+  padding: 0px 20px 20px 20px;
 }
 
 .container-contact {
-    padding: 0px 20px 20px 20px;
+  padding: 0px 20px 20px 20px;
 }
 
 .body-text {
-    display: inline;
-    line-height: 26px;
-    font-size: 16px;
-    margin: 0px;
-    padding: 0px;
+  display: inline;
+  line-height: 26px;
+  font-size: 16px;
+  margin: 0px;
+  padding: 0px;
 }
 
-input[type=text] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 0;
-    box-sizing: border-box;
-  }
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 0;
+  box-sizing: border-box;
+}
 
-input[type=submit] {
-    margin: 30px 0px 0px 0px;
-    height: 30px;
-    width: 75px;
-    border: none;
-    background-color: #4aaaa5;
-    color: #ffffff;
-    cursor: pointer;
+input[type="submit"] {
+  margin: 30px 0px 0px 0px;
+  height: 30px;
+  width: 75px;
+  border: none;
+  background-color: #4aaaa5;
+  color: #ffffff;
+  cursor: pointer;
 }
 
 textarea {
-    width: 100%;
-    height: 200px;
-    resize: none;
-    box-sizing: border-box;
-    padding: 12px 20px;
+  width: 100%;
+  height: 200px;
+  resize: none;
+  box-sizing: border-box;
+  padding: 12px 20px;
 }
 
 .portfolio-item {
-    float: left;
-    position: relative;
-    margin: 0px 25px 20px;
+  float: left;
+  position: relative;
+  margin: 0px 25px 20px;
 }
 
 .portfolio-img {
-    height: 250px;
-    width: 300px;
+  height: 250px;
+  width: 300px;
 }
 
 .portfolio-label {
-    position: absolute;
-    bottom: 15px;
-    width: 300px;
-    height: 60px;
-    background-color: #4aaaa5;
+  position: absolute;
+  bottom: 15px;
+  width: 300px;
+  height: 60px;
+  background-color: #4aaaa5;
 }
 
 h3 {
-    text-align: center;
-    color: #ffffff;
-    font-family: 'Georgia', Times, 'Times New Roman', serif;
-    font-weight: 100;
+  text-align: center;
+  color: #ffffff;
+  font-family: "Georgia", Times, "Times New Roman", serif;
+  font-weight: 100;
 }
 
 /*********Footer********/
 
 .footer {
-    height: 50px;
-    width: 100%;
-    background: #666666;
-    position: fixed;
-    bottom: 0;
-    margin-top: 50px;
-    border-top: solid 8px #4aaaa5;
-    text-align: center;
+  height: 50px;
+  width: 100%;
+  background: #666666;
+  position: fixed;
+  bottom: 0;
+  margin-top: 50px;
+  border-top: solid 8px #4aaaa5;
+  text-align: center;
 }
 
 .footer-text {
-    color: #cccccc;
-    font-size: 12px;
-    margin-top: 30px;
+  color: #cccccc;
+  font-size: 12px;
+  margin-top: 30px;
 }
 
 /********Media Queries********/
 
 @media screen and (max-width: 980px) {
+  .main {
+    margin-top: 75px;
+    width: 748px;
+  }
 
+  header {
+    position: static;
+  }
+
+  .nav-container {
+    width: 748px;
+  }
 }
 
 @media screen and (max-width: 768px) {
+  .main {
+    margin-top: 75px;
+    width: 620px;
+  }
 
+  header {
+    position: static;
+  }
+
+  .nav-container {
+    width: 620px;
+  }
+
+  .container-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: 640px) {
-    .main {
-        margin-top: 75px;
-        width: 550px;
-    }
-    
-    header {
-        position: static;
-    }
+  .main {
+    margin-top: 75px;
+    width: 550px;
+  }
 
-    .nav-container {
-        width: 640px;
-    }
+  header {
+    position: static;
+  }
 
-    #logo {
-        display: flex;
-        justify-content: center;
-    }
+  .nav-container {
+    width: 640px;
+  }
 
-    .btn-container {
-        height: 50px;
-        background: #ffffff;
-        border-bottom: solid 1px #ccc;
-        padding: 0;
-        margin: 0 0 30px;
-        display: flex;
-        justify-content: center;
-    }
+  #logo {
+    display: flex;
+    justify-content: center;
+  }
 
-    .nav-btn {
-        float: none;
-        display: inline;
-        margin: 20px 20px 0px;
-        text-align:center;
-    }
+  .btn-container {
+    height: 50px;
+    background: #ffffff;
+    border-bottom: solid 1px #ccc;
+    padding: 0;
+    margin: 0 0 30px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row-reverse;
+  }
 
-    #logo {
-        width: 100%;
-        float: none;
-        margin: 0 auto;
-        text-align: center;
-    }
+  .nav-btn {
+    float: none;
+    display: inline;
+    margin: 20px 20px 0px;
+    text-align: center;
+  }
 
-    #profile-photo {
-        width: 460px;
-        height: 460px;
-        margin-bottom: 20px;
-    }
+  #logo {
+    width: 100%;
+    float: none;
+    margin: 0 auto;
+    text-align: center;
+  }
 
-    .container-portfolio {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
+  #profile-photo {
+    width: 460px;
+    height: 460px;
+    margin-bottom: 20px;
+  }
+
+  .container-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
